@@ -1,3 +1,11 @@
+2015-10-18  Natalia Portillo  <claunia@claunia.com>
+
+	* PrintHex.cs:
+	* DateHandlers.cs:
+	* DiscImageChef.Helpers.csproj:
+	  Added specific console handling for standard, verbose, debug
+	  and error outputs.
+
 2015-10-05  Natalia Portillo  <claunia@claunia.com>
 
 	* PrintHex.cs:
